# ChangeLog for app-shells/tcsh
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.64 2006/12/02 14:03:37 grobian Exp $

*tcsh-6.14-r4 (02 Dec 2006)

  02 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  +files/tcsh-6.14-r4.patch, tcsh-6.14-r3.ebuild, +tcsh-6.14-r4.ebuild:
  New revision to fix bug #156422 and the additional comments on bug #91725.
  Thanks to Matus UHLAR - fantomas.

  19 Oct 2006; Fabian Groffen <grobian@gentoo.org>
  +files/tcsh-6.14-makefile.patch, tcsh-6.14-r3.ebuild:
  Added patch for bug #151951, thanks dev-zero for pointing out

  11 Apr 2006; Fabian Groffen <grobian@gentoo.org> tcsh-6.14-r3.ebuild:
  Adding USE-flag catalogs for NLS catalogs support. Thanks to Kouya Sakamoto
  <krs at) juno.ocn dot ne.jp> (bug #128439)

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> tcsh-6.14-r3.ebuild:
  Marked stable on mips.

  07 Feb 2006; Aron Griffis <agriffis@gentoo.org> tcsh-6.14-r3.ebuild:
  Mark 6.14-r3 stable on alpha

  06 Feb 2006; Jeroen Roovers <jer@gentoo.org> tcsh-6.14-r3.ebuild:
  Stable on hppa (bug #121343).

  06 Feb 2006; Markus Rothe <corsair@gentoo.org> tcsh-6.14-r3.ebuild:
  Stable on ppc64: bug #121343

  03 Feb 2006; <nixnut@gentoo.org> tcsh-6.14-r3.ebuild:
  Added ppc keyword. bug 121343

  03 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> tcsh-6.14-r3.ebuild:
  Stable on sparc wrt #121343

  03 Feb 2006; Joshua Jackson <tsunam@gentoo.org> tcsh-6.14-r3.ebuild:
  Stable on x86; bug #121343

  02 Feb 2006; Patrick McLean <chutzpah@gentoo.org> tcsh-6.14-r3.ebuild:
  Stable on amd64 (bug #121343).

*tcsh-6.14-r3 (29 Jan 2006)

  29 Jan 2006; Fabian Groffen <grobian@gentoo.org>
  +files/tcsh-6.14.00-debian-dircolors.patch, +tcsh-6.14-r3.ebuild:
  Making fixes for bug #119703: providing a csh -> tcsh symlink, and bug #120792
  to stop tcsh complaining on newest coreutils' LS_COLORS var.
