@@ -10,28 +10,28 @@ AUX tcsh-6.14-r2.patch 2057 RMD160 8fba8a743944e04e8f03525ee0f8763576d251ec SHA1
 MD5 dc3f6395569049b5f3a1547364be0260 files/tcsh-6.14-r2.patch 2057
 RMD160 8fba8a743944e04e8f03525ee0f8763576d251ec files/tcsh-6.14-r2.patch 2057
 SHA256 cdc6f499a9eef1876604a0072562aad4b594e12c6073a98ea7a2f33d88aa21c5 files/tcsh-6.14-r2.patch 2057
-AUX tcsh-6.14-r4.patch 1015 RMD160 8eac7bf5afbe02bd1b88333c408f883497788c51 SHA1 2d31d93c424032a459273e83e7533f8f70e9e314 SHA256 bf6c7ef9f699db88f54550fb7c2b45e0045542eba057724052e12c6a805f3aa9
-MD5 8a5b99cada661f3759a22e9b38857cb7 files/tcsh-6.14-r4.patch 1015
-RMD160 8eac7bf5afbe02bd1b88333c408f883497788c51 files/tcsh-6.14-r4.patch 1015
-SHA256 bf6c7ef9f699db88f54550fb7c2b45e0045542eba057724052e12c6a805f3aa9 files/tcsh-6.14-r4.patch 1015
+AUX tcsh-6.14-r4.patch 1030 RMD160 58af5c8fafcaa7ef8bb96bb2687422b93a4b61ea SHA1 c3db204db1d075ff83134428b0cfd62f99792b56 SHA256 909df93052f8af0a3d2d83125894db774509d3c22cc495fe266484529eb1f6d9
+MD5 53fbf5190e95b8b74cbd50e0980aff8b files/tcsh-6.14-r4.patch 1030
+RMD160 58af5c8fafcaa7ef8bb96bb2687422b93a4b61ea files/tcsh-6.14-r4.patch 1030
+SHA256 909df93052f8af0a3d2d83125894db774509d3c22cc495fe266484529eb1f6d9 files/tcsh-6.14-r4.patch 1030
 AUX tcsh-6.14.00-debian-dircolors.patch 444 RMD160 8ab4e49fbfd979aed6cfdd5bd45c5e37fa810394 SHA1 a7ccadc40cb4d6e9dcfc9672c5bf7f547ed0bd83 SHA256 a9568a2a474ef662a665c87c52983fea7999e5cf2bc4920d45baa2558c9dc32a
 MD5 18211cacb14d3b0d1253b35bb9683d21 files/tcsh-6.14.00-debian-dircolors.patch 444
 RMD160 8ab4e49fbfd979aed6cfdd5bd45c5e37fa810394 files/tcsh-6.14.00-debian-dircolors.patch 444
 SHA256 a9568a2a474ef662a665c87c52983fea7999e5cf2bc4920d45baa2558c9dc32a files/tcsh-6.14.00-debian-dircolors.patch 444
 DIST tcsh-6.14-conffiles.tar.bz2 20200 RMD160 96e5e43985fe1b6e53b4a2a53f1b7bed3c2ae103 SHA1 3ec8841c88b2c99c6b5978b907d9f3daa22faa7c SHA256 1bae5000c84593187974580c48b0edcec88e2f6363e3c1ec1e43da45c9a63049
 DIST tcsh-6.14.00.tar.gz 859780 RMD160 fa7635225ceb0225aedcfad5dd9d8e17d8d70849 SHA1 55a08b31a57cfd8631edd1fb7e42f18578d8198a SHA256 fd738ac0c003d283a214d15d46c1bc3fb80afad697110994dccb8d101f0d6f0e
-EBUILD tcsh-6.14-r4.ebuild 2100 RMD160 50fa4ef0f2f1741139f786a5e6e482f0e1a4e993 SHA1 e1515ae8a3e7b6111654b11f2af0da5d6c70ccab SHA256 5f867fce07f3a6039c0b0ae6371b2c2eac2faac61031f3a393be41650e10fc6f
-MD5 e5bbd8fdcf159c2739003d7fe0c3fdc2 tcsh-6.14-r4.ebuild 2100
-RMD160 50fa4ef0f2f1741139f786a5e6e482f0e1a4e993 tcsh-6.14-r4.ebuild 2100
-SHA256 5f867fce07f3a6039c0b0ae6371b2c2eac2faac61031f3a393be41650e10fc6f tcsh-6.14-r4.ebuild 2100
-MISC ChangeLog 9312 RMD160 a0c503a0ebb58dd924ca88c8765915aff9b57ee6 SHA1 4a5555d2b876d66ce217ad4834ccb955e631c556 SHA256 ebc28a6ac42fe0a382fe5f0c69e683b528aac65c6931001bc19cbdd227d82721
-MD5 52d49826890d5f1100022df6489d8eae ChangeLog 9312
-RMD160 a0c503a0ebb58dd924ca88c8765915aff9b57ee6 ChangeLog 9312
-SHA256 ebc28a6ac42fe0a382fe5f0c69e683b528aac65c6931001bc19cbdd227d82721 ChangeLog 9312
+EBUILD tcsh-6.14-r5.ebuild 2100 RMD160 5a45f4b34b15f7d5e38323701f661886dfb2c0b8 SHA1 0e84b7bb4ddf8ec4e8d1b337ff8397fce222271a SHA256 18c9b07da5d68287279a8a379db6988e5eac02924f820dc505311417817faf93
+MD5 bafe0d42042a03113914b531117bf264 tcsh-6.14-r5.ebuild 2100
+RMD160 5a45f4b34b15f7d5e38323701f661886dfb2c0b8 tcsh-6.14-r5.ebuild 2100
+SHA256 18c9b07da5d68287279a8a379db6988e5eac02924f820dc505311417817faf93 tcsh-6.14-r5.ebuild 2100
+MISC ChangeLog 9583 RMD160 ff0bb088ba3bd75f644604f1f577147f1109ca38 SHA1 eb2bce36d1c0529e1837513fdd098ac9a357d142 SHA256 91631eb97b87de94cd551dcac1a57175f9f532a4d9430c776409e8203c3a1fbf
+MD5 5927ddb5c1c552d5f53375e2e1df4ba8 ChangeLog 9583
+RMD160 ff0bb088ba3bd75f644604f1f577147f1109ca38 ChangeLog 9583
+SHA256 91631eb97b87de94cd551dcac1a57175f9f532a4d9430c776409e8203c3a1fbf ChangeLog 9583
 MISC metadata.xml 655 RMD160 10cac0d0a38ab114ec6f34be1fed837f38a77f40 SHA1 8e04b7ca425f5469ce8515c2ab8fce6cf166b3ca SHA256 bde0b24fe9a295482f3394de9b3d658bbcc2e58504136785fd4a6210b1d2e28b
 MD5 57ae68ef95b893d172203de06faf380d metadata.xml 655
 RMD160 10cac0d0a38ab114ec6f34be1fed837f38a77f40 metadata.xml 655
 SHA256 bde0b24fe9a295482f3394de9b3d658bbcc2e58504136785fd4a6210b1d2e28b metadata.xml 655
-MD5 6a74574703dca366bcf1a246f9bf6e32 files/digest-tcsh-6.14-r4 497
-RMD160 28da1915a51453b91b97fe54a3866e7bc589b8c0 files/digest-tcsh-6.14-r4 497
-SHA256 92be31902b0ded77904c82ced086d52942e9a5fc4a99a90983091fc22c61b4f5 files/digest-tcsh-6.14-r4 497
+MD5 6a74574703dca366bcf1a246f9bf6e32 files/digest-tcsh-6.14-r5 497
+RMD160 28da1915a51453b91b97fe54a3866e7bc589b8c0 files/digest-tcsh-6.14-r5 497
+SHA256 92be31902b0ded77904c82ced086d52942e9a5fc4a99a90983091fc22c61b4f5 files/digest-tcsh-6.14-r5 497
