@@ -1,6 +1,13 @@
 # ChangeLog for app-shells/tcsh
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.64 2006/12/02 14:03:37 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.65 2006/12/05 14:58:35 grobian Exp $
+
+*tcsh-6.14-r5 (05 Dec 2006)
+
+  05 Dec 2006; Fabian Groffen <grobian@gentoo.org> files/tcsh-6.14-r4.patch,
+  -tcsh-6.14-r4.ebuild, +tcsh-6.14-r5.ebuild:
+  Fix issue that was mentioned post-fix in bug #156422: don't use tset as it
+  is an interactive tool, which is evil.
 
 *tcsh-6.14-r4 (02 Dec 2006)
 
